# Fleet_Plaza

./: README.md  fleet-plaza.sh  index.html  initial_prompt.txt  package-lock.json  package.json
.claude/commands/: amnesia.md
src/: fleet.ts  ipc.ts  main.ts  palette.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  correlate.rs  lib.rs  main.rs  model.rs  poller.rs  skills.rs  tail.rs  term.rs  tmux.rs
src-tauri/tests/: bridge.rs  tail_test.rs
src/plaza/: animator.ts  camera.ts  drag.ts  mii.ts  scene.ts  zones.ts
src/ui/: agent_panel.ts  anon.ts  dialogs.ts  format.ts  style.css  topbar.ts
tools/: fleet-plaza.desktop  install_desktop.sh
